--- a/README.org
+++ b/README.org
@@ -23,6 +23,28 @@ Simple Emacs integration with [[https://github.com/jmerle/competitive-companion]
 - Complex templating :: Use specific templating solutions for that.
 - Mouse friendly interface :: Why reach for the mouse during a contest? 🤨
 
+** Installation
+
+This package is currently only available through the GitHub repository. Installation examples in some common settings are provided below.
+
+*** Doom Emacs
+
+Add this to =$DOOMDIR/packages.el=:
+
+#+begin_src emacs-lisp
+  (package! competitive-companion
+    :recipe (:host github :repo "luishgh/competitive-companion.el"))
+#+end_src
+
+*** use-package + straight.el
+
+#+begin_src emacs-lisp
+  (use-package competitive-companion
+    :straight (competitive-companion :type git
+                                     :host github
+                                     :repo "luishgh/competitive-companion.el"))
+#+end_src
+
 ** Use instructions
 
 *** First time
