--- a/README.org
+++ b/README.org
@@ -46,30 +46,6 @@ Add this to =$DOOMDIR/packages.el=:
                                      :repo "luishgh/competitive-companion.el"))
 #+end_src
 
-** Use instructions
+** Documentation
 
-*** First time
-
-1. Download the [[https://github.com/jmerle/competitive-companion][competitive companion browser extension]] for your favorite (and supported) browser.
-2. Add the value of ~competitive-companion-server-port~ (=10050= by default) to /Custom ports/ in the extension's preferences menu.
-3. Set the following /custom/ variables to your liking:
-   - ~competitive-companion-task-major-mode~ :: major mode used by task implementations, this is used to automatically determine its extension.
-   - ~competitive-companion-task-template-file~ :: the user's template file, this is automatically inserted in generated task files.
-4. Change the binding of ~competitive-companion-run-tests~ if the default, =C-c .=, doesn't suit you.
-5. Check the [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Customization-Groups.html][customization group]] ~competitive-companion~ for more options!
-
-
-*** During contest
-
-1. Make a folder for the contest (doing this automatically is not currently supported) and open it with ~M-x dired~.
-2. Turn on ~competitive-companion-mode~. This automatically selects the current folder as the contest's folder and starts the connection with the browser extension.
-3. Open a task page in your browser and click the extension button. The task's implementation file is automatically generated in the contest's folder and test cases are downloaded to temporary files.
-4. Code!
-5. After compiling your program, run it against all test cases with ~competitive-companion-run-tests~. The outputs buffer uses ~magit-section~, the library that implements the togglable sections of [[https://magit.vc/][Magit]], which means all the bindings you would typically expect on such an interface works! (*Tip*: check all the enabled bindings with =C-h m=)
-6. Get that AC!
-
-*** Important Observations
-
-- You need to run ~competitive-companion-run-tests~ while inside the task implementation file's buffer. This helps ~competitive-companion.el~ determine which test cases it should run. You can, however, have multiple binaries (one standard and one compiled with a stress test flag, for example) for the same task and choose which one to run against the test cases.
-- You *should not kill a task implementation file's buffer during the contest*. As said above, the package uses buffer local variables to associate a programming file with its test cases directory. If you kill the task buffer after loading its cases, you'll have to use the browser extension to load them again. Your implementation file will be preserved, as is explained below.
-- If a file with the automatically generated filename already exists in the contest folder, selecting that task's page with the browser extension only downloads the test cases, opens the file in a buffer and adjusts that buffer's local variables to associate it with the case files.
+This package includes an Info manual! After installation, check it out with ~M-x info-display-manual RET competitive-companion~
