--- a/doc/competitive-companion.texi
+++ b/doc/competitive-companion.texi
@@ -77,6 +77,7 @@ Customizing
 * Language/file options::
 * Output buffer options::
 * Server options::
+* Modeline support::
 
 @end detailmenu
 @end menu
@@ -199,6 +200,7 @@ Note that it can be useful to set some of the options below with Directory Local
 * Language/file options::
 * Output buffer options::
 * Server options::
+* Modeline support::
 @end menu
 
 @node Language/file options
@@ -274,6 +276,23 @@ The package runs a local http server to communicate with the browser extension, 
 @table @asis
 @item @code{competitive-companion-server-port}
 Port on which the package's server listens. This must be consistent with the browser extension's configuration, @ref{Initial setup}.
+@end table
+
+@node Modeline support
+@section Modeline support
+
+This package provides a fairly simple modeline support. If enabled, the modeline will display an indicator when the mode is active. If the @samp{nerd-icons} package is installed, the indicator is a balloon. Otherwise, it defaults to @samp{" CC "}.
+
+@vindex competitive-companion-modeline-support
+@table @asis
+@item @code{competitive-companion-modeline-support}
+Enable modeline support
+@end table
+
+@vindex competitive-companion-modeline-face
+@table @asis
+@item @code{competitive-companion-modeline-face}
+Face used by the modeline indicator
 @end table
 
 @node Function and Command Index
