--- a/doc/competitive-companion.org
+++ b/doc/competitive-companion.org
@@ -40,6 +40,26 @@ Now, we need to tell the extension and Emacs to communicate through the same por
 
 Now is the perfect time to take a look at the options in [[*Customizing][Customizing]] to make sure the package behaves like you expect. If you don't want to dig into customization just yet, please take a quick look at the language/file options ([[*Language/file options][Language/file options]]), as they are the ones that must be set correctly for the package to work.
 
+*** Evil integration
+
+If you are an user of ~evil-mode~, you should call the function below in your configuration after loading this package:
+
+#+findex: competitive-companion-setup-evil
+- ~competitive-companion-setup-evil~ :: Set up default bindings for Evil users. This avoids that Evil supresses the package's default bindings in the outputs buffer, [[*Inside the outputs buffer][Inside the outputs buffer]].
+
+For example, using ~use-package~ your config should look something like this:
+
+#+begin_src emacs-lisp
+  (use-package competitive-companion
+    ;;; other stuff...
+    :config
+    (with-eval-after-load 'evil
+      (competitive-companion-setup-evil))
+
+    ;;; Remaining of the :config block...
+    )
+#+end_src
+
 ** During a contest
 
 This short tutorial describes the basic usage of the package throughout a typical online contest:
@@ -52,6 +72,8 @@ This short tutorial describes the basic usage of the package throughout a typica
 6. Get that AC!
 
 *** User Commands
+
+The commands below are the main source of interaction with the package. It is strongly recommended that you use your Emacs configuration to tune them to your needs. You can create a command that creates a new contest folder and automatically turns on ~competitive-companion-mode~, another command that compiles the current file and after runs ~competitive-companion-run-tests~, etc.
 
 #+findex: competitive-companion-mode
 - ~competitive-companion-mode~ :: starts the connection with the browser extension and sets the contest's folder to the value of ~default-directory~.
